src/audio_output/filters.c
@@ -393,7 +393,8 @@ vout_thread_t *aout_filter_GetVout(filter_t *filter, const video_format_t *fmt)
 
     video_format_AdjustColorSpace(&adj_fmt);
 
-    if (vout_Request(&cfg, NULL, NULL)) {
+    bool started;
+    if (vout_Request(&cfg, NULL, NULL, &started)) {
         vout_Close(vout);
         vout = NULL;
     }
